# icsaet-demo

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini
.cursor/: README.md
.cursor/commands/: 1-research.md  2-innovate.md  3-plan-task.md  4-execution.md  5-review.md  _decompose.md
.cursor/rules/: accessibility.mdc  core-dev-rules.mdc  python.mdc  terraform-style.mdc
icsaet_demo/: main.py
specifications/: scrum-5-spec.md  task-01-plan.md  task-01.md  task-02-plan.md  task-02.md  task-03-plan.md  task-03.md  task-04-plan.md  task-04.md  task-05-plan.md  task-05.md  task-06-plan.md  task-06.md  task-07-plan.md  task-07.md  task-08-plan.md  task-08.md  task-09-plan.md  task-09.md  task-breakdown-summary.md
src/icsaet_mcp/: __init__.py  __main__.py  config.py  prompts.py  server.py  tools.py
tests/: README.md  conftest.py
tests/integration/: test_query_flow.py  test_real_api.py
tests/unit/: test_config.py  test_icaet_client.py  test_main.py  test_query_tool.py  test_server.py  test_tools.py
